<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>com.k15t.spark</groupId>
    <artifactId>spark</artifactId>
    <version>4.0.1</version>

    <name>SPARK</name>

    <packaging>pom</packaging>

    <modules>
        <module>spark-common</module>
        <module>spark-confluence</module>
        <module>spark-jira</module>
        <module>spark-javax-compat-servlet</module>
    </modules>

    <organization>
        <name>K15t Software GmbH</name>
        <url>https://www.k15t.com/</url>
    </organization>

    <licenses>
        <license>
            <name>MIT License</name>
            <url>https://opensource.org/license/mit</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <scm>
        <connection>scm:git:git@github.com:K15t/spark.git</connection>
        <url>https://github.com/K15t/spark</url>
        <tag>4.0.1</tag>
    </scm>

    <distributionManagement>
        <repository>
            <id>nexus</id>
            <name>K15t Software Release</name>
            <url>
                https://nexus.k15t.com/content/repositories/releases/
            </url>
        </repository>
        <snapshotRepository>
            <id>nexus</id>
            <name>K15t Software Snapshot</name>
            <url>
                https://nexus.k15t.com/content/repositories/snapshots/
            </url>
        </snapshotRepository>
    </distributionManagement>

    <properties>
        <java.version>11</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.javadoc.skip>true</maven.javadoc.skip>
        <confluence.version>8.0.0</confluence.version>
        <jira.version>8.13.0</jira.version>
        <jsoup.version>1.15.3</jsoup.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- Scope: Test -->
            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>4.12</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-core</artifactId>
                <version>1.10.19</version>
                <scope>test</scope>
            </dependency>

            <dependency>
                <groupId>io.atlassian.util.adapter</groupId>
                <artifactId>jakarta-adapters</artifactId>
                <version>0.2.5</version>
                <scope>compile</scope>
            </dependency>

            <!-- Scope: Provided -->
            <!-- These versions (or a later one) must be provided by both the Confluence and Jira compile targets (see properties) -->
            <dependency>
                <groupId>javax.servlet</groupId>
                <artifactId>javax.servlet-api</artifactId>
                <version>4.0.0</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>jakarta.servlet</groupId>
                <artifactId>jakarta.servlet-api</artifactId>
                <version>6.0.0</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>3.9</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>com.atlassian.sal</groupId>
                <artifactId>sal-api</artifactId>
                <version>5.0.2</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-context</artifactId>
                <version>5.3.21</version>
                <scope>provided</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <release>${java.version}</release>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>2.6</version>
                <configuration>
                    <encoding>${project.build.sourceEncoding}</encoding>
                </configuration>
            </plugin>
        </plugins>
        <pluginManagement>
            <plugins>
                <plugin>
                    <artifactId>maven-release-plugin</artifactId>
                    <version>2.5</version>
                    <configuration>
                        <tagNameFormat>@{project.version}</tagNameFormat>
                        <autoVersionSubmodules>true</autoVersionSubmodules>
                    </configuration>
                </plugin>
                <plugin>
                    <artifactId>maven-javadoc-plugin</artifactId>
                    <version>2.9.1</version>
                </plugin>
                <plugin>
                    <artifactId>maven-source-plugin</artifactId>
                    <version>2.3</version>
                </plugin>
                <plugin>
                    <artifactId>maven-deploy-plugin</artifactId>
                    <version>2.7</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.5.3</version>
                    <configuration>
                        <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.owasp</groupId>
                    <artifactId>dependency-check-maven</artifactId>
                    <version>6.0.1</version>
                    <configuration>
                        <skipArtifactType>license.properties</skipArtifactType>
                        <assemblyAnalyzerEnabled>false</assemblyAnalyzerEnabled>
                        <format>junit</format>
                        <prettyPrint>true</prettyPrint>
                    </configuration>
                    <executions>
                        <execution>
                            <goals>
                                <goal>check</goal>
                            </goals>
                            <phase>verify</phase>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>

    </build>

    <profiles>
        <profile>
            <id>platform-8</id>
            <properties>
                <confluence.version>10.0.1</confluence.version>
                <jira.version>11.0.0-m0015</jira.version>
            </properties>
        </profile>
    </profiles>

</project>
